<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cardview_contents">
        这是一个CardView控件，CardView控件可以显示阴影和圆角效果。\n\n
        这个Demo演示了CardView控件的用法。
    </string>

    <string name="title_activity_list_view_both">集成下拉刷新和上拉加载更多</string>
    <string name="title_activity_list_view_activity">ListViewActivity</string>
    <string name="title_activity_list_view_header">StickyHeaderListView</string>
    <string name="title_activity_horizontal_list_view">HorizontalListView</string>

    <string name="simple_string_list">Simple String List</string>
    <string name="custom_adapter_list">Custom Adapter List</string>
    <string name="custom_adapter_list_with_dividers">Custom Adapter List with dividers</string>
    <string name="title_activity_swipe_list_view">SwipeListView</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_timeline_list">TimelineListActivity</string>
    <string name="title_activity_vertical_timeline">VerticalTimelineActivity</string>
    <string name="title_activity_slide_menu_qq5">SlideMenuQQ5Activity</string>
    <string name="title_activity_image_painting">ImagePaintingActivity</string>
    <string name="title_activity_gson">GsonActivity</string>
    <string name="title_activity_image_color_change">ImageColorChangeActivity</string>
    <string name="title_activity_facepp_test_your_face">FaceppTestYourFaceActivity</string>
    <string name="title_activity_shape_image_view">ShapeImageViewActivity</string>


    <string name="weather_forecast_title">天气预报</string>
    <string name="weather_forecast_current">实时天气预报</string>
    <string name="weather_forecast_future">未来天气预报</string>
    <string name="location_title">定位</string>
    <string name="location_net_method">网络（基站+WIFI）定位</string>
    <string name="location_mulity_method">混合定位（GPS+网络）</string>
    <string name="location_gps_method">GPS定位（建议室外使用）</string>
    <string name="location_geofence_method">地理围栏（警戒区域提醒）</string>
    <string name="current_weather_report_title">实时天气</string>
    <string name="future_weather_report_title">天气预报</string>
    <string name="net_location_title">网络定位</string>
    <string name="gps_location_title">GPS定位</string>

    <string name="weather_location">"地      点："</string>
    <string name="weather_weather">"天      气："</string>
    <string name="weather_temperature">"气      温："</string>
    <string name="weather_wind_direction">"风      向："</string>
    <string name="weather_wind_power">"风      力："</string>
    <string name="weather_air_humidity">空气湿度：</string>
    <string name="weather_weather_publish">发布时间：</string>

    <string name="location_latlng">"坐      标："</string>
    <string name="location_accurancy">"精      度："</string>
    <string name="location_method">定位方式：</string>
    <string name="location_time">定位时间：</string>
    <string name="location_description">位置描述：</string>
    <string name="location_country">国&#160;&#160;&#160;&#160;&#160;&#160;家 ：</string>
    <string name="location_province">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;省 ：</string>
    <string name="location_city">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;市   ：</string>
    <string name="location_county">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区 ：</string>
    <string name="location_road">街&#160;&#160;&#160;&#160;&#160;&#160;道   ：</string>
    <string name="location_poi">POI名称 ：</string>
    <string name="location_city_code">城市编码：</string>
    <string name="location_area_code">区域编码：</string>

    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="location_des_open_text">是否打开位置信息描述：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="geofence_des">点击地图，以点击点为中心建立地理围栏，再次点击地图修改地理围栏位置</string>


    <string name="native_implementation">Native implementation</string>
    <string name="library_implementation">Library implementation</string>
    <string name="horizontal_progress">Horizontal ProgressBar</string>
    <string name="indeterminate_horizontal_progress">Indeterminate horizontal ProgressBar</string>
    <string name="indeterminate_progress">Indeterminate ProgressBar</string>
    <string name="toolbar_progress">ProgressBar on Toolbar</string>
    <string name="horizontal_progress_toolbar">Horizontal</string>
    <string name="indeterminate_horizontal_progress_toolbar">Indeterminate horizontal</string>
    <string name="title_activity_view_pager_with_tranform_anim">ViewPagerWithTranformAnimActivity
    </string>
    <string name="title_activity_jazzy_view_pager_test">JazzyViewPagerTestActivity</string>


    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="title_activity_view_pager_test">ViewPagerTestActivity</string>
    <string name="title_activity_smart_tag_layout">SmartTagLayoutActivity</string>
    <string name="title_activity_rx_android">RxAndroidActivity</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生了未知的错误，\n我们会尽快反馈到程序员哥哥的.</string>
    <string name="customactivityoncrash_error_activity_restart_app">&#160;&#160;&#160;&#160;重启&#160;&#160;&#160;&#160;</string>
    <string name="customactivityoncrash_error_activity_error_details">错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详细</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="title_activity_play_video_by_video_view">PlayVideoByVideoViewActivity</string>

</resources>
